@@ -1,8 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.624 2009-09-23 05:50:58 guru Exp $
+	$Id: ChangeLog,v 1.625 2009-09-23 06:17:37 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2009-09-22	pwessel
+	* misc/kml2gmt.c:		Attempt to parse feature description (if present in KML)
+	* misc/gmt2kml.c:		Attempt to write feature description (if present in segment header)
 	* mgd77/mgd77sniffer.c:		SEGV when an array index was allowed to become -1
 -----------------------------------------------------------------------------------------
 2009-09-20	pwessel
